# neic-glass3

./: .codacy.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CODING-STYLE.md  CONTRIBUTING.md  DISCLAIMER.md  GlassConfiguration.md  ISSUE_TEMPLATE.md  LICENSE.md  README.md  code.json  codecov.yml  glass-broker-app.md  index.md  neic-glass3.code-workspace
config/: CMakeLists.txt  Config.cmake.in  README.md  configCMakeConfig.h.in
config/html/: annotated.html  classes.html  classutil_1_1Config-members.html  classutil_1_1Config.html  classutil_1_1Config__coll__graph.map  classutil_1_1Config__coll__graph.md5  config_8cpp.html  config_8cpp__incl.map  config_8cpp__incl.md5  config_8h.html  config_8h__dep__incl.md5  config_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespaces.html  namespaceutil.html
config/include/: config.h
config/src/: config.cpp
config/tests/: config_unittest.cpp
gen-travel-times-app/: CMakeLists.txt  Doxyfile.in  README.md  build.gradle  gen-travel-times-app.cpp  gen-travel-times-appCMakeConfig.h.in
gen-travel-times-app/html/: files.html  gen-travel-times-app_8cpp.html  gen-travel-times-app_8cpp__incl.map  gen-travel-times-app_8cpp__incl.md5  globals.html  globals_func.html  graph_legend.html  index.html
gen-travel-times-app/lib/: neic-traveltime-0.1.0_license.txt
gen-travel-times-app/models/: README.txt  ak135.hed  ak135.tbl  ellip.txt  groups.txt  mak135.mod  mcia.mod  mcus.mod  mogs.mod  mwus.mod  phases.txt  ttstats.txt
gen-travel-times-app/params/: ak135_mod.d  gen-travel-times.d
glass-app/: CMakeLists.txt  Doxyfile.in  README.md  generate_coverage.sh  glass-app.cpp  glass-appCMakeConfig.h.in
glass-app/fileInput/: README.md  fileInput.cpp  fileInput.h
glass-app/fileOutput/: fileOutput.cpp  fileOutput.h
glass-app/file_input/: file_input.cpp  file_input.h
glass-app/file_output/: README.md  file_output.cpp  file_output.h
glass-app/html/: annotated.html  classes.html  classglass_1_1fileInput-members.html  classglass_1_1fileInput.html  classglass_1_1fileInput__coll__graph.md5  classglass_1_1fileInput__inherit__graph.map  classglass_1_1fileInput__inherit__graph.md5  classglass_1_1fileOutput-members.html  classglass_1_1fileOutput.html  classglass_1_1fileOutput__coll__graph.md5  classglass_1_1fileOutput__inherit__graph.map  classglass_1_1fileOutput__inherit__graph.md5  classglass_1_1input-members.html  classglass_1_1input.html  classglass_1_1input__inherit__graph.map  classglass_1_1input__inherit__graph.md5  classoutput.html  classoutput__coll__graph.md5  classoutput__inherit__graph.map  classoutput__inherit__graph.md5  dir_4e9ba11478ea89c016ef97b229c9de8c.html  dir_4e9ba11478ea89c016ef97b229c9de8c_dep.map  dir_4e9ba11478ea89c016ef97b229c9de8c_dep.md5  dir_d0411a3330e1b0f1a8484884e468d215.html  dir_d0411a3330e1b0f1a8484884e468d215_dep.map  dir_d0411a3330e1b0f1a8484884e468d215_dep.md5  dir_f28117777345c557d0ac9286934936dc.html  dir_f28117777345c557d0ac9286934936dc_dep.map  dir_f28117777345c557d0ac9286934936dc_dep.md5  file__input_8cpp.html  file__input_8cpp__incl.map  file__input_8cpp__incl.md5  file__input_8h.html  file__input_8h__dep__incl.map  file__input_8h__dep__incl.md5  file__input_8h__incl.map  file__input_8h__incl.md5  file__input_8h_source.html  file__output_8cpp.html  file__output_8cpp__incl.map  (+35 more)
glass-app/input/: README.md  input.cpp  input.h
glass-app/params/: README.md  culled_global_grid.d  glass.d  glass_ak_grid.d  glass_aleutians_grid.d  glass_chile_grid.d  glass_east_pacific_rise_grid.d  glass_eurasia_grid.d  glass_global_grid.d  glass_hi_grid.d  glass_indonesia1_grid.d  glass_indonesia2_grid.d  glass_initialize.d  glass_input.d  glass_japan1_grid.d  glass_japan2_grid.d  glass_juandefuca_grid.d  glass_kuril_grid.d  glass_north_atlantic_grid.d  glass_ok_grid.d  glass_output.d  glass_south_america_grid.d  glass_south_atlantic_grid.d  glass_south_sandwich_islands_grid.d  glass_tonga1_grid.d  glass_tonga2_grid.d  glass_us_grid.d  global_grid.d  initialize.d  input.d  ok_grid.d  output.d  stationlist.d  us_grid.d
glass-app/testdata/: README.md  inputtest.d  outputtest.d
glass-app/tests/: input_unittest.cpp  output_unittest.cpp
glass-broker-app/: CMakeLists.txt  LICENSE.md  README.md  glass-broker-app.cpp  glass-broker-appCMakeConfig.h.in
glass-broker-app/brokerInput/: brokerInput.cpp  brokerInput.h
glass-broker-app/brokerOutput/: brokerOutput.cpp  brokerOutput.h  outputTopic.cpp  outputTopic.h
glass-broker-app/broker_input/: broker_input.cpp  broker_input.h
glass-broker-app/broker_output/: README.md  brokerOutput.cpp  brokerOutput.h
glass-broker-app/input/: README.md  input.cpp  input.h
glass-broker-app/params/: README.md  culled_global_grid.d  glass.d  glass_ak_grid.d  glass_aleutians_grid.d  glass_chile_grid.d  glass_east_pacific_rise_grid.d  glass_eurasia_grid.d  glass_hi_grid.d  glass_indonesia1_grid.d  glass_indonesia2_grid.d  glass_initialize.d  glass_input.d  glass_japan1_grid.d  glass_japan2_grid.d  glass_juandefuca_grid.d  glass_kuril_grid.d  glass_north_atlantic_grid.d  glass_ok_grid.d  glass_output.d  glass_south_america_grid.d  glass_south_atlantic_grid.d  glass_tonga1_grid.d  glass_tonga2_grid.d  glass_us_grid.d  global_grid.d  initialize.d  input.d  ok_grid.d  output.d  us_grid.d
glasscore/: CMakeLists.txt  Doxyfile.in  README.md  glasscoreCMakeConfig.h.in
glasscore/glasslib/: NodesToResolutionCalculations.xlsx
glasscore/html/: Brent_8h.html  Brent_8h__dep__incl.map  Brent_8h__dep__incl.md5  Brent_8h__incl.map  Brent_8h__incl.md5  (+540 more)
input/: CMakeLists.txt  README.md
log/: CMakeLists.txt  Config.cmake.in  Doxyfile.in  README.md  logCMakeConfig.h.in
output/: CMakeLists.txt  Doxyfile.in  README.md  outputCMakeConfig.h.in
parse/: CMakeLists.txt  README.md  parseCMakeConfig.h.in
process/: CMakeLists.txt  README.md  processCMakeConfig.h.in
util/: CMakeLists.txt  README.md  generate_coverage.sh  utilCMakeConfig.h.in
(+2530 files in other folders)
